# OOP-RobotNavigationChallenge

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  flake.nix
cmake/: CompilerWarnings.cmake  Conan.cmake  StandardProjectSettings.cmake
lib/application/: CMakeLists.txt
lib/application/cmake-modules/: FindScopeGuard.cmake  Findgl3w.cmake  Findstb_image.cmake
lib/application/source/: application.cpp
src/: CMakeLists.txt  main.cpp
src/TEAMNAME/player/: Player.cpp  Player.hpp
src/TEAMNAME/units/: Headquarters.cpp  Headquarters.hpp  Robot.cpp  Robot.hpp
src/helper/: RandomNumber.cpp  RandomNumber.hpp
src/internal/: GameApplication.cpp  GameApplication.hpp
src/internal/game/: GameState.cpp  GameState.hpp  Settings.hpp
src/internal/game/neutral/: NeutralPlayer.cpp  NeutralPlayer.hpp
src/internal/game/neutral/units/: Virus.cpp  Virus.hpp
src/internal/game/player/: PlayerBase.cpp  PlayerBase.hpp
src/internal/game/positioning/: Satellite.cpp  Satellite.hpp
src/internal/game/resources/: Resource.cpp  Resource.hpp
src/internal/game/units/: HeadquartersBase.cpp  HeadquartersBase.hpp  RobotBase.cpp  RobotBase.hpp  Unit.cpp  Unit.hpp
src/internal/gui/: Renderer.cpp  Renderer.hpp
src/internal/gui/helper/: ImPlotHelper.cpp  ImPlotHelper.hpp
src/internal/gui/main/: ControlPanel.cpp  ControlPanel.hpp  GamePlot.cpp  GamePlot.hpp
src/internal/gui/menus/: MainMenuBar.cpp  MainMenuBar.hpp
src/internal/gui/widgets/: HelpMarker.cpp  HelpMarker.hpp  imgui_ex.cpp  imgui_ex.hpp
src/internal/gui/windows/: Global.cpp  Global.hpp
src/internal/helper/: RandomNumberGenerator.cpp  RandomNumberGenerator.hpp
